fix overflow scrollbar on hover

--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,10 @@ html {
 }
 
 body {
-  margin-bottom: 10em;
+  height: 100vh;
+  height: 100dvh;
+  width: 100vw;
+  overflow: hidden;
 }
 
 .logo-container {
